--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "requests-jwtauth"
-version = "1.0.0-dev"
+version = "1.0.0"
 description = "Authenticator plugins for Requests that support JWT bearer tokens"
 readme = "README.md"
 dependencies = [
@@ -9,8 +9,9 @@ dependencies = [
 ]
 requires-python = ">=3.8"
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3 :: Only",
+    "Operating System :: OS Independent",
     "License :: OSI Approved :: Apache Software License",
 ]
 
